--- a/cookies-warning.css
+++ b/cookies-warning.css
@@ -38,3 +38,17 @@
 #cookies-warning svg .fg {
   fill: #335B90;
 }
+#cookies-warning a#cookies-warning-more-info {
+  margin-right: 10px;
+  background: #dc042b;
+  padding: 16px;
+  color: #fff;
+  text-decoration: none;
+}
+#cookies-warning a#cookies-warning-close {
+  margin-right: 10px;
+  background: #ccc;
+  padding: 16px;
+  color: #fff;
+  text-decoration: none;
+}
